Disabled Country of Residence field after being saved. Fixed an issue with the country select overlapping the other inputs.

--- a/src/assets/stylesheets/users.scss
+++ b/src/assets/stylesheets/users.scss
@@ -124,6 +124,12 @@
   padding: 15px;
 }
 
+.user-form {
+  .Select {
+    margin-top: 3px;
+  }
+}
+
 @media screen and (max-width: $screen-xs-max) {
   .user-management {
     padding-top: 0;
